Bug 445039 - ksystemstats constantly (3-4 times a second) accessing disk but doing nothing.
Summary: ksystemstats constantly (3-4 times a second) accessing disk but doing nothing.
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.22.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-05 19:48 UTC by Maxim
Modified: 2021-11-29 16:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim 2021-11-05 19:48:16 UTC
SUMMARY
ksystemstats continuously accessing my drive at ~1,7% but zero % writes or reads. Disk light flickers 3-4 times a second non stop.

STEPS TO REPRODUCE
1.  Just a clean install Kubuntu 21.10
2. 
3. 

OBSERVED RESULT
When Idle, disk light flickers 3-4 times every second, iostat -0 says only ksystemstats is doing this, and mostly actually the only thing actively accessing the disk.

EXPECTED RESULT
(observed after removing ksystemstats) Disk light flickers like once every 5-15 seconds when idle 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Kubuntu 21.10
KDE Plasma Version: 5.22.5 (came default with it)
KDE Frameworks Version:  5.86.0 (came default with it)
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Can not kill the process ksystemstats, so had to uninstall it. Then the problem is solved. After reinstalling it, the problem came back.
For now i removed it, but looks like a crucial part for Kubuntu.

Hardware:
DeskMini X300 Series with
cpu: AMD Ryzen 7 PRO 4750G with Radeon Graphics
storage: Micron/Crucial Non-Volatile memory controller
network: enp2s0 Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller disk: /dev/nvme0n1 Micron/Crucial Disk
partition: /dev/nvme0n1p1 Partition
/dev/nvme0n1p2 Partition
memory: Main Memory, 32GB
Comment 1 Bug Janitor Service 2021-11-25 14:37:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksystemstats/-/merge_requests/26
Comment 2 Arjen Hiemstra 2021-11-29 11:18:11 UTC
Git commit 03fa8a7405730e1f4fa2b0104872cd03176ebb9f by Arjen Hiemstra.
Committed on 29/11/2021 at 11:16.
Pushed by ahiemstra into branch 'master'.

Don't update disks if no one is listening

It's not very useful to update things that aren't being used.

M  +10   -1    plugins/disks/disks.cpp

https://invent.kde.org/plasma/ksystemstats/commit/03fa8a7405730e1f4fa2b0104872cd03176ebb9f
Comment 3 Arjen Hiemstra 2021-11-29 16:44:32 UTC
Git commit 7406648cfa06ee220f65b6f2940fe30bbb620796 by Arjen Hiemstra.
Committed on 29/11/2021 at 16:44.
Pushed by ahiemstra into branch 'Plasma/5.23'.

Don't update disks if no one is listening

It's not very useful to update things that aren't being used.


(cherry picked from commit 03fa8a7405730e1f4fa2b0104872cd03176ebb9f)

M  +10   -1    plugins/disks/disks.cpp

https://invent.kde.org/plasma/ksystemstats/commit/7406648cfa06ee220f65b6f2940fe30bbb620796