Don't update disks if no one is listening

It's not very useful to update things that aren't being used.

BUG: 445039


(cherry picked from commit 03fa8a7405730e1f4fa2b0104872cd03176ebb9f)